<resources>
    <string name="app_name">Media Tree</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="home_nav">HOME</string>
    <string name="library_nav">LIBARY</string>
    <string name="search_nav">SEARCH</string>
    <string name="profile_nav">PROFILE</string>

    <string name="design_by">Design by</string>
    <string name="user_truongdc">`@`truongdc21</string>
    <string name="welcome_you_to">Wellcome you to</string>
    <string name="login">Login</string>

    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="skips">Skips</string>
    <string name="signin_with_google">Sigin with Google</string>
    <string name="or">Or</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_comfirm_password">Enter comfirm password</string>
    <string name="register_account">Register new accounts</string>
    <string name="sign_in_fail">Sign in failruse </string>
    <string name="password_incorrect">Password confirmation is incorrect, please try again</string>
    <string name="register_success"> Register accounts succesful.</string>
    <string name="client_id">184923950123-bsolpevggqh3uij3lftiaan3idncsmq0.apps.googleusercontent.com</string>
    <string name="email_invalid">Email invalid!</string>
    <string name="pass_invalid">Password invalid!</string>

    <string name="please_login_to_use">Please login to use!</string>
    <string name="update_profile">Update your profile</string>
    <string name="please_up_profile">Please update profile!</string>

    <string name="artists">Artists</string>
    <string name="playlist">Playlist</string>
    <string name="play_all">Play all</string>
    <string name="Songs">Songs</string>
    <string name="Song">Song</string>
    <string name="tracks">tracks</string>
    <string name="isEmpty">List song is Empty !!</string>
    <string name="no_playlist">No Playlist</string>

    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>

</resources>
