<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.FisrtInstallActivity">

    <TextView
        android:id="@+id/tvNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:fontFamily="@font/commissioner_thin"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_32"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin" />

    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/tvNameApp"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/welcome_you_to"
            android:textSize="@dimen/sp_24" />

        <ImageView
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:background="@drawable/ic_eco" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bgr_radius_button"
        android:elevation="@dimen/dp_10"
        android:paddingStart="@dimen/dp_60"
        android:paddingEnd="@dimen/dp_60"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSkips"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/bgr_radius_button2"
        android:paddingStart="@dimen/dp_60"
        android:paddingEnd="@dimen/dp_60"
        android:textColor="@color/gray"
        android:text="@string/skips"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_by"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/user_truongdc"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
