<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.SplashActivity">

    <TextView
        android:id="@+id/tvNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner_thin"
        android:text="@string/app_name"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_32"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:background="@drawable/ic_eco"
        app:layout_constraintBottom_toTopOf="@id/tvNameApp"
        app:layout_constraintEnd_toStartOf="@id/tvNameApp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tvNameApp"
        app:layout_constraintStart_toStartOf="@id/tvNameApp"
        app:layout_constraintTop_toBottomOf="@id/tvNameApp">

        <View
            android:id="@+id/loadingONE"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:background="@drawable/bgr_radius2" />

        <View
            android:id="@+id/loadingTWO"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/bgr_radius2" />

        <View
            android:id="@+id/loadingTHREE"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/bgr_radius2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_by"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/user_truongdc"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
