<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ListSongFragment">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/ic_back"
        android:backgroundTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgBack" />

    <TextView
        android:id="@+id/tvSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/Song"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/imgBack"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSong"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSong" />

    <Button
        android:id="@+id/btnPlayAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/bgr_radius_button_black"
        android:drawableStart="@drawable/ic_play_media"
        android:drawablePadding="@dimen/dp_20"
        android:drawableTint="@color/green"
        android:elevation="@dimen/dp_10"
        android:paddingStart="@dimen/dp_30"
        android:paddingEnd="@dimen/dp_30"
        android:stateListAnimator="@null"
        android:text="@string/play_all"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewIsEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_isEmpty"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/ic_erro"
            android:backgroundTint="@color/gray"
            app:layout_constraintEnd_toEndOf="@id/tvIsEmpty"
            app:layout_constraintStart_toStartOf="@id/tvIsEmpty"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIsEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/isEmpty"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_isEmpty" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
