<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewNotLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/ic_eco"
            app:layout_constraintBottom_toBottomOf="@id/tvNameApp"
            app:layout_constraintStart_toEndOf="@id/tvNameApp"
            app:layout_constraintTop_toTopOf="@id/tvNameApp" />

        <Button
            android:id="@+id/btnSwithToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bgr_radius_button"
            android:elevation="@dimen/dp_10"
            android:paddingStart="@dimen/dp_60"
            android:paddingEnd="@dimen/dp_60"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/dp_125"
            android:layout_height="@dimen/dp_125"
            android:layout_marginBottom="@dimen/dp_50"
            android:background="@drawable/ic_account_circle"
            android:backgroundTint="@color/green"
            app:layout_constraintBottom_toTopOf="@id/btnSwithToLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/please_login_to_use"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSwithToLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewLoged"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/viewTopRadius"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_125"
            android:background="@drawable/bgr_radius_proflie"
            android:elevation="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameAppTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:elevation="@dimen/dp_15"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/viewTopRadius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/viewTopRadius" />

        <ImageView
            android:id="@+id/imgIcApp"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/ic_eco"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@id/tvNameAppTwo"
            app:layout_constraintStart_toEndOf="@id/tvNameAppTwo"
            app:layout_constraintTop_toTopOf="@id/tvNameAppTwo" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avt_profile"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:elevation="@dimen/dp_15"
            android:src="@color/gray"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/dp_2"
            app:layout_constraintBottom_toBottomOf="@id/viewTopRadius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgIcApp"
            app:layout_constraintTop_toBottomOf="@id/viewTopRadius" />

        <LinearLayout
            android:id="@+id/viewGrEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_avt_profile">

            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:background="@drawable/ic_email" />

            <TextView
                android:id="@+id/tvEmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewGrNameUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewGrEmail">

            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:background="@drawable/ic_profile" />

            <TextView
                android:id="@+id/tvNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:maxLines="1"
                android:text="@string/please_up_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewGrUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewGrNameUser">

            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:background="@drawable/ic_reload" />

            <TextView
                android:id="@+id/tvUpdateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:maxLines="1"
                android:text="@string/update_profile"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewGrSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewGrUpdateProfile">

            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:background="@drawable/ic_logout" />

            <TextView
                android:id="@+id/tvSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:maxLines="1"
                android:text="@string/sign_out"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
